--- a/Random Users/Resources/Base.lproj/Main.storyboard
+++ b/Random Users/Resources/Base.lproj/Main.storyboard
@@ -61,7 +61,13 @@
                             <outlet property="delegate" destination="Cow-Zs-zAK" id="JK3-U0-BT0"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Users" id="WNT-aA-KLf"/>
+                    <navigationItem key="navigationItem" title="Users" id="WNT-aA-KLf">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Ipt-u5-2pg">
+                            <connections>
+                                <segue destination="WCQ-Mq-2wn" kind="show" id="6fZ-KZ-cNo"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kLS-tj-jlc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -75,39 +81,46 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="psk-82-zoc">
-                                <rect key="frame" x="87" y="627" width="41.666666666666664" height="121"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="5Di-Wq-sc4">
+                                <rect key="frame" x="57" y="108" width="300" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="300" id="Vrr-cc-fXd"/>
+                                    <constraint firstAttribute="width" secondItem="5Di-Wq-sc4" secondAttribute="height" multiplier="1:1" id="jkt-L9-MW6"/>
+                                </constraints>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="psk-82-zoc">
+                                <rect key="frame" x="57.000000000000007" y="428" width="114.66666666666669" height="77"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r8l-Tc-4eK">
-                                        <rect key="frame" x="0.0" y="0.0" width="41.666666666666664" height="20.333333333333332"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r8l-Tc-4eK">
+                                        <rect key="frame" x="0.0" y="0.0" width="114.66666666666667" height="20.333333333333332"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kwT-6D-4P6">
-                                        <rect key="frame" x="0.0" y="50.333333333333336" width="41.666666666666664" height="20.333333333333336"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kwT-6D-4P6">
+                                        <rect key="frame" x="0.0" y="28.333333333333314" width="114.66666666666667" height="20.333333333333329"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ChU-DC-r9r">
-                                        <rect key="frame" x="0.0" y="100.66666666666667" width="41.666666666666664" height="20.333333333333329"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ChU-DC-r9r">
+                                        <rect key="frame" x="0.0" y="56.666666666666693" width="114.66666666666667" height="20.333333333333336"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5Di-Wq-sc4">
-                                <rect key="frame" x="54" y="118" width="307" height="269"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="300" id="Vrr-cc-fXd"/>
-                                    <constraint firstAttribute="width" secondItem="5Di-Wq-sc4" secondAttribute="height" multiplier="1:1" id="jkt-L9-MW6"/>
-                                    <constraint firstAttribute="width" constant="300" id="nUz-Y7-QSq"/>
-                                </constraints>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="5Di-Wq-sc4" firstAttribute="top" secondItem="fAM-Pz-Yol" secondAttribute="top" constant="20" id="4rX-6a-5ed"/>
+                            <constraint firstItem="psk-82-zoc" firstAttribute="leading" secondItem="5Di-Wq-sc4" secondAttribute="leading" id="4zm-kf-s8q"/>
+                            <constraint firstItem="psk-82-zoc" firstAttribute="top" secondItem="5Di-Wq-sc4" secondAttribute="bottom" constant="20" id="5TH-6p-xf7"/>
+                            <constraint firstItem="fAM-Pz-Yol" firstAttribute="trailing" secondItem="5Di-Wq-sc4" secondAttribute="trailing" constant="57" id="HaN-GZ-v9M"/>
+                            <constraint firstItem="5Di-Wq-sc4" firstAttribute="centerX" secondItem="3EN-2s-3B9" secondAttribute="centerX" id="OxK-Wl-C6S"/>
+                            <constraint firstItem="5Di-Wq-sc4" firstAttribute="leading" secondItem="fAM-Pz-Yol" secondAttribute="leading" constant="57" id="jMB-yj-ubo"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="fAM-Pz-Yol"/>
                     </view>
                     <navigationItem key="navigationItem" id="b5u-lZ-PRB"/>
@@ -135,4 +148,7 @@
             <point key="canvasLocation" x="2828.985507246377" y="-21.428571428571427"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="6fZ-KZ-cNo"/>
+    </inferredMetricsTieBreakers>
 </document>
